add paging for select operation

--- a/config/application.properties
+++ b/config/application.properties
@@ -37,3 +37,6 @@ spring.datasource.validation-query = select 1
 
 spring.datasource.test-on-borrow = false
 spring.datasource.test-on-return = false
+
+mybatis.config-location = classpath:mybatis-config.xml
+#mybatis.mapper-locations = classpath:org/binggo/mockapp/mapper/*.xml
