--- a/pom.xml
+++ b/pom.xml
@@ -44,11 +44,18 @@
     	<groupId>mysql</groupId>
     	<artifactId>mysql-connector-java</artifactId>
     </dependency>
-	
+
 	<dependency>
 		<groupId>org.mybatis.spring.boot</groupId>
 		<artifactId>mybatis-spring-boot-starter</artifactId>
 		<version>1.1.1</version>
+	</dependency>
+
+	<!-- mybatis paging -->
+	<dependency>
+    	<groupId>com.github.pagehelper</groupId>
+    	<artifactId>pagehelper</artifactId>
+    	<version>4.1.6</version>
 	</dependency>
 
   </dependencies>
