add web ui for mockapp. the mockapp can be deployed in the external tomcat

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 # --------------------------------------------------
 # common info (optional)
 # --------------------------------------------------
-info.app.name = mockapp
-info.app.version = 0.1.0
-spring.main.banner_mode = off
+#info.app.name = mockapp
+#info.app.version = 0.1.0
+#spring.main.banner_mode = off
 
 # --------------------------------------------------
 # Logging
 # --------------------------------------------------
-logging.config = config/logback-spring.xml
+logging.config = classpath:logback-spring.xml
 
 # --------------------------------------------------
 # Embedded Server Configuration
 # --------------------------------------------------
-server.port = 9754
+#server.port = 9754
 
 # --------------------------------------------------
 # Datasource
