--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>org.binggo</groupId>
   <artifactId>mockapp</artifactId>
   <version>0.1.0</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
   <name>mockapp</name>
   <description>a mock project used to test mybatis</description>
@@ -14,7 +14,7 @@
   <parent>
 	<groupId>org.springframework.boot</groupId>
 	<artifactId>spring-boot-starter-parent</artifactId>
-	<version>1.3.6.RELEASE</version>
+	<version>1.4.0.RELEASE</version>
 	<relativePath/>
   </parent>
 
@@ -33,7 +33,18 @@
 		<groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-tomcat</artifactId>
+        <scope>provided</scope>
+    </dependency>
     
+    <dependency>
+    	<groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-starter-thymeleaf</artifactId>
+    </dependency>
+      
     <dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-test</artifactId>
@@ -67,9 +78,6 @@
   		<plugin>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-maven-plugin</artifactId>
-			<configuration>
-				<executable>true</executable>
-			</configuration>
 		</plugin>
   	</plugins>	
   	
